# ai-trader

./: .gitignore  MANIFEST.in  README.md  README_zh.md  SQLITE_STORAGE_GUIDE.md  a2as.yaml  pyproject.toml  requirements.txt
.data/: 2454_2020-01-01_to_2025-12-15.csv  3711_2020-01-01_to_2025-12-15.csv
.github/workflows/: cd.yml  ci.yml
agentic_ai_trader/data-science/: .env.example  Dockerfile  README.md  cross_dataset_relations.json  flights_dataset_config.json  forecasting_sticker_sales_dataset_config.json  main.py  pyproject.toml  toolbox-alloydb-local.yaml  toolbox-alloydb-remote.yaml  toolbox.env-example  toolbox_env-example.sh
agentic_ai_trader/data-science/data_science/: __init__.py  agent.py  prompts.py  tools.py
agentic_ai_trader/data-science/data_science/sub_agents/: __init__.py
agentic_ai_trader/data-science/data_science/sub_agents/alloydb/: agent.py  prompts.py  tools.py
agentic_ai_trader/data-science/data_science/sub_agents/analytics/: agent.py  prompts.py
agentic_ai_trader/data-science/data_science/sub_agents/bigquery/: agent.py  prompts.py  tools.py
agentic_ai_trader/data-science/data_science/sub_agents/bigquery/chase_sql/: chase_constants.py  chase_db_tools.py  dc_prompt_template.py  llm_utils.py  qp_prompt_template.py
agentic_ai_trader/data-science/data_science/sub_agents/bigquery/chase_sql/sql_postprocessor/: README.md  correction_prompt_template.py  sql_translator.py
agentic_ai_trader/data-science/data_science/sub_agents/bqml/: agent.py  prompts.py  tools.py
agentic_ai_trader/data-science/data_science/utils/: create_bq_table.py  reference_guide_RAG.py  utils.py
agentic_ai_trader/data-science/data_science/utils/data/: test.csv
agentic_ai_trader/data-science/deployment/: deploy.py  test_deployment.py
agentic_ai_trader/data-science/eval/: test_eval.py
agentic_ai_trader/data-science/eval/eval_data/: simple.test.json  test_config.json
agentic_ai_trader/data-science/flights_dataset/: ticket_sales_history_table.csv
agentic_ai_trader/data-science/infra/: .terraform.lock.hcl
agentic_ai_trader/data-science/tests/: test_agents.py
agentic_ai_trader/financial-advisor/: .env.example  README.md  pyproject.toml
agentic_ai_trader/financial-advisor/deployment/: deploy.py  test_deployment.py
agentic_ai_trader/financial-advisor/eval/: test_eval.py
agentic_ai_trader/financial-advisor/eval/data/: financial-advisor.test.json
agentic_ai_trader/financial-advisor/financial_advisor/: __init__.py  agent.py  prompt.py
agentic_ai_trader/financial-advisor/financial_advisor/sub_agents/data_analyst/: __init__.py  agent.py  prompt.py
agentic_ai_trader/financial-advisor/financial_advisor/sub_agents/execution_analyst/: __init__.py  agent.py  prompt.py
agentic_ai_trader/financial-advisor/financial_advisor/sub_agents/risk_analyst/: __init__.py  agent.py  prompt.py
agentic_ai_trader/financial-advisor/financial_advisor/sub_agents/trading_analyst/: __init__.py  agent.py  prompt.py
agentic_ai_trader/financial-advisor/tests/: test_agents.py
agentic_ai_trader/trading-backtester/: .env.example  README.md  main.py  pyproject.toml  test_basic.py  test_integration.py
agentic_ai_trader/trading-backtester/data/.adk/: session.db
agentic_ai_trader/trading-backtester/data/us_stock/: NVDA_2020-01-01_to_2025-12-31.csv  TSM_2020-01-01_to_2025-12-31.csv
agentic_ai_trader/trading-backtester/tests/: __init__.py  test_coordinator.py
agentic_ai_trader/trading-backtester/tests/.adk/: session.db
agentic_ai_trader/trading-backtester/trading_backtester/: __init__.py  agent.py  prompts.py
agentic_ai_trader/trading-backtester/trading_backtester/.adk/: session.db
agentic_ai_trader/trading-backtester/trading_backtester/core/: __init__.py  config.py  utils.py
agentic_ai_trader/trading-backtester/trading_backtester/sub_agents/: __init__.py
agentic_ai_trader/trading-backtester/trading_backtester/sub_agents/backtesting_execution/: __init__.py  agent.py  prompt.py
agentic_ai_trader/trading-backtester/trading_backtester/sub_agents/strategy_analysis/: __init__.py  agent.py  prompt.py
agentic_ai_trader/trading-backtester/trading_backtester/sub_agents/trader/: __init__.py  agent.py  mock_trade_executor.py  prompt.py
agentic_ai_trader/trading-backtester/trading_backtester/tools/: __init__.py  agent_tools.py  coordinator_tools.py  mcp_tools.py
ai_trader/: __init__.py  cli.py  loader.py  telemetry.py  trader.py  utils.py
ai_trader/backtesting/: __init__.py
ai_trader/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
ai_trader/data/: __init__.py  load.py
ai_trader/mcp/: __init__.py  __main__.py  models.py  server.py
ai_trader/strategy/: base.py  indicators.py
ai_trader/utils/: __init__.py  backtest.py
config/: default.yaml
config/backtest/: README.md  bbands_example.yaml  buyhold_example.yaml  crypto_example.yaml  double_top_example.yaml  momentum_example.yaml  naive_roc_example.yaml  portfolio_example.yaml  risk_averse_example.yaml  roc_ma_example.yaml  roc_stoch_example.yaml  rsi_bbands_example.yaml  sma_example.yaml  triple_rsi_example.yaml  vcp_example.yaml
data/crypto/: BTC-USD_2020-01-01_to_2026-03-28.csv  BTC-USD_2024-01-01_to_2024-01-31.csv  BTC-USD_2024-01-01_to_2025-12-14.csv  ETH-USD.csv  SOL-USD.csv
data/forex/: EURUSD=X.csv
data/tw_stock/: 0050.csv  2308.csv  2317_2020-01-01_to_2025-12-15.csv  2330.csv  2382_2020-01-01_to_2025-12-15.csv  2412_2020-01-01_to_2025-12-15.csv  2881_2020-01-01_to_2025-12-15.csv  2882_2020-01-01_to_2025-12-15.csv  2891_2020-01-01_to_2025-12-15.csv
data/us_stock/: AAPL_2020-01-01_to_2025-12-12.csv  AAPL_cached.csv  AMD_2020-01-01_to_2025-12-12.csv  AMZN_2020-01-01_to_2025-12-12.csv  CSCO_2020-01-01_to_2025-12-12.csv  GOOG.csv  IBM_2020-01-01_to_2025-12-12.csv  META_2020-01-01_to_2025-12-12.csv  MSFT_2020-01-01_to_2025-12-12.csv  NFLX_2020-01-01_to_2025-12-12.csv  NVDA_2020-01-01_to_2025-12-12.csv  TSLA.csv  tsm.csv  (+3 more)
docs/: ALPHA_RSI_PRO.md  MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md  adaptive-rsi.md  refract.md
scripts/: update_strategies.py
tests/: __init__.py  conftest.py
(+142 files in other folders)
