[project]
name = "trading-backtester"
version = "0.1.0"
description = "Agentic Trading Strategy Backtesting Engine"
authors = [
    {name = "AI Trader Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "backtrader>=1.9.76",
    "yfinance>=0.2.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
trading-backtester = "trading_backtester.cli:main"